--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
   <title>Minha Loja</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body><a href="https://wa.me/5511919423064?text=Olá,%20quero%20falar%20com%20você!" target="_blank" style="
+    display: inline-block;
+    background-color: #25D366;
+    color: white;
+    padding: 12px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  ">
+    💬 Fale no WhatsApp
+  </a>
+
+</body>
+  
 
   <header>
     <h1>Minha Loja</h1>
